tests/baselines/reference/genericTypeConstraints.errors.txt
tests/cases/compiler/genericTypeConstraints.ts(9,31): error TS2737: Property 'fooMethod' is missing in type 'FooExtended' but present in type 'Foo'.


==== tests/cases/compiler/genericTypeConstraints.ts (1 errors) ====
    class Foo {
        fooMethod() {}
    }
    
    class FooExtended { }
    
    class Bar<T extends Foo> { }
    
    class BarExtended extends Bar<FooExtended> {
                                  ~~~~~~~~~~~
!!! error TS2737: Property 'fooMethod' is missing in type 'FooExtended' but present in type 'Foo'.
        constructor() {
            super();
        }
    }